--- a/app/index.html
+++ b/app/index.html
@@ -21,5 +21,11 @@
     <script src="{{rootURL}}assets/gloss.js"></script>
 
     {{content-for "body-footer"}}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sails.io.js/1.1.13/sails.io.min.js"></script>
+    <script>
+      io.sails.url = 'http://gloss:8080/';
+    </script>
   </body>
 </html>
