--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sails.io.js/1.1.13/sails.io.min.js"></script>
     <script>
-      io.sails.url = 'http://gloss.space:8080/';
+      io.sails.url = 'http://gloss:8080';
     </script>
   </body>
 </html>
