tracking, ui, connection handling, etc

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sails.io.js/1.1.13/sails.io.min.js"></script>
     <script>
       io.sails.url = 'http://gloss:8080';
+      io.sails.autoConnect = false;
     </script>
   </body>
 </html>
