first electron draft

--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,10 @@
 
     {{content-for "body-footer"}}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sails.io.js/1.1.13/sails.io.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/sails.io.js/1.1.13/sails.io.min.js"></script> -->
     <script>
-      io.sails.url = 'http://gloss:8080';
+      io.sails.url = 'http://gloss';
       io.sails.autoConnect = false;
     </script>
   </body>
